Add job data + service + controller
