# ReactApp1.Server/Controllers/JobsListingController.cs
@@ -1,0 +1,33 @@
+﻿using Microsoft.AspNetCore.Mvc;
+using ReactApp1.Server.Models;
+using ReactApp1.Server.Services;
+
+// For more information on enabling Web API for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
+
+namespace ReactApp1.Server.Controllers
+{
+    
+    [ApiController]
+    [Route("jobs")]
+    public class JobsListingController : ControllerBase
+    {
+        private readonly IJobsListingService _jobListingService;
+
+        public JobsListingController(IJobsListingService jobListingService)
+        {
+            _jobListingService = jobListingService;
+        }
+
+        [HttpGet]
+        public List<Job>? Get()
+        {
+            return _jobListingService.GetJobs();
+        }
+
+        [HttpGet("{id}")]
+        public string Get(int id)
+        {
+            return "value";
+        }
+    }
+}
