# ReactApp1.Server/swagger.json
@@ -5,6 +5,58 @@
     "version": "1.0"
   },
   "paths": {
+    "/jobs": {
+      "get": {
+        "tags": [
+          "JobsListing"
+        ],
+        "produces": [
+          "text/plain",
+          "application/json",
+          "text/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/Job"
+              }
+            }
+          }
+        }
+      }
+    },
+    "/jobs/{id}": {
+      "get": {
+        "tags": [
+          "JobsListing"
+        ],
+        "produces": [
+          "text/plain",
+          "application/json",
+          "text/json"
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "required": true,
+            "type": "integer",
+            "format": "int32"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "schema": {
+              "type": "string"
+            }
+          }
+        }
+      }
+    },
     "/weather-forecast": {
       "get": {
         "tags": [
@@ -73,6 +125,54 @@
         6
       ],
       "type": "integer"
+    },
+    "Job": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "format": "int32",
+          "type": "integer"
+        },
+        "company": {
+          "type": "string"
+        },
+        "new": {
+          "type": "boolean"
+        },
+        "featured": {
+          "type": "string"
+        },
+        "position": {
+          "type": "string"
+        },
+        "role": {
+          "type": "string"
+        },
+        "level": {
+          "type": "string"
+        },
+        "postedAt": {
+          "type": "string"
+        },
+        "contract": {
+          "type": "string"
+        },
+        "location": {
+          "type": "string"
+        },
+        "languages": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
+        },
+        "tools": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
+        }
+      }
     },
     "WeatherForecast": {
       "type": "object",
